@@ -1,9 +1,9 @@
 /*
  * ============================================================================
-` * GNU General Public License
+ * GNU General Public License
  * ============================================================================
  *
- * Copyright (C) 2015 Infinite Automation Software. All rights reserved.
+ * Copyright (C) 2015 Radix IoT LLC. All rights reserved.
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -12,20 +12,19 @@
  *
  * This program is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  * GNU General Public License for more details.
  * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ * along with this program. If not, see <http://www.gnu.org/licenses/>.
  *
- * When signing a commercial license with Infinite Automation Software,
+ * When signing a commercial license with Radix IoT LLC,
  * the following extension to GPL is made. A special exception to the GPL is
  * included to allow you to distribute a combined work that includes BAcnet4J
  * without being obliged to provide the source code for any proprietary components.
  *
- * See www.infiniteautomation.com for commercial license options.
- *
- * @author Matthew Lohbihler
+ * See www.radixiot.com for commercial license options.
  */
+
 package com.serotonin.bacnet4j;
 
 import java.time.Clock;
@@ -327,8 +326,8 @@ public class LocalDevice implements AutoCloseable {
             int remaining = attempts;
             while (remaining > 0) {
                 final int from = random.nextInt(ObjectIdentifier.UNINITIALIZED - rangeSize);
-                final List<Integer> idList = IntStream.range(from, from + rangeSize).boxed()
-                        .collect(Collectors.toList());
+                final List<Integer> idList = IntStream.range(from, from + rangeSize).boxed().collect(Collectors
+                        .toList());
 
                 final DeviceEventAdapter listener = new DeviceEventAdapter() {
                     @Override
@@ -347,8 +346,8 @@ public class LocalDevice implements AutoCloseable {
 
                 if (!idList.isEmpty()) {
                     LOG.info("Found {} ids that are still available. Choosing {}", idList.size(), idList.get(0));
-                    deviceObject.writePropertyInternal(PropertyIdentifier.objectIdentifier,
-                            new ObjectIdentifier(ObjectType.device, idList.get(0)));
+                    deviceObject.writePropertyInternal(PropertyIdentifier.objectIdentifier, new ObjectIdentifier(
+                            ObjectType.device, idList.get(0)));
                     break;
                 }
 
@@ -369,22 +368,20 @@ public class LocalDevice implements AutoCloseable {
 
         // The defaulting of the list of receipients is done here because sometimes the network has to be initialized
         // before the local broadcast address is known.
-        SequenceOf<Recipient> restartNotificationRecipients = getPersistence().loadSequenceOf(
-                deviceObject.getPersistenceKey(PropertyIdentifier.restartNotificationRecipients), Recipient.class);
+        SequenceOf<Recipient> restartNotificationRecipients = getPersistence().loadSequenceOf(deviceObject
+                .getPersistenceKey(PropertyIdentifier.restartNotificationRecipients), Recipient.class);
         if (restartNotificationRecipients == null) {
             restartNotificationRecipients = new SequenceOf<>(new Recipient(getLocalBroadcastAddress()));
             deviceObject.writePropertyInternal(PropertyIdentifier.restartNotificationRecipients,
                     restartNotificationRecipients);
         }
         final UnconfirmedCovNotificationRequest restartNotif = new UnconfirmedCovNotificationRequest(
-                UnsignedInteger.ZERO, getId(), getId(), UnsignedInteger.ZERO,
-                new SequenceOf<>(
-                        new PropertyValue(PropertyIdentifier.systemStatus,
-                                deviceObject.get(PropertyIdentifier.systemStatus)),
-                        new PropertyValue(PropertyIdentifier.timeOfDeviceRestart,
-                                deviceObject.get(PropertyIdentifier.timeOfDeviceRestart)),
-                        new PropertyValue(PropertyIdentifier.lastRestartReason,
-                                deviceObject.get(PropertyIdentifier.lastRestartReason))));
+                UnsignedInteger.ZERO, getId(), getId(), UnsignedInteger.ZERO, new SequenceOf<>(new PropertyValue(
+                        PropertyIdentifier.systemStatus, deviceObject.get(PropertyIdentifier.systemStatus)),
+                        new PropertyValue(PropertyIdentifier.timeOfDeviceRestart, deviceObject.get(
+                                PropertyIdentifier.timeOfDeviceRestart)), new PropertyValue(
+                                        PropertyIdentifier.lastRestartReason, deviceObject.get(
+                                                PropertyIdentifier.lastRestartReason))));
         for (final Recipient recipient : restartNotificationRecipients) {
             final Address address = recipient.toAddress(this);
             send(address, restartNotif);
@@ -395,6 +392,7 @@ public class LocalDevice implements AutoCloseable {
 
     /**
      * Create a ScheduledExecutorService for use by the local device
+     * 
      * @return
      * @see java.util.concurrent.ScheduledExecutorService
      */
@@ -754,7 +752,7 @@ public class LocalDevice implements AutoCloseable {
      * @param instanceNumber
      * @return the remote device
      * @throws BACnetException
-     *             if anything goes wrong, including timeout.
+     *                         if anything goes wrong, including timeout.
      */
     public RemoteDevice getRemoteDeviceBlocking(final int instanceNumber) throws BACnetException {
         return getRemoteDeviceBlocking(instanceNumber, transport.getTimeout());
@@ -781,7 +779,7 @@ public class LocalDevice implements AutoCloseable {
      * @param instanceNumber
      * @return the remote device
      * @throws BACnetException
-     *             if anything goes wrong, including timeout.
+     *                         if anything goes wrong, including timeout.
      */
     public RemoteDevice getRemoteDeviceBlocking(final int instanceNumber, final long timeoutMillis)
             throws BACnetException {
@@ -832,7 +830,8 @@ public class LocalDevice implements AutoCloseable {
 
                         // Cache the device.
                         if (rd != null) {
-                            remoteDeviceCache.putEntity(instanceNumber, rd, cachePolicies.getDevicePolicy(instanceNumber));
+                            remoteDeviceCache.putEntity(instanceNumber, rd, cachePolicies.getDevicePolicy(
+                                    instanceNumber));
                         }
                     }
                 }
@@ -877,14 +876,15 @@ public class LocalDevice implements AutoCloseable {
      * returned discoverer must be stopped by the caller.
      *
      * @param cacheUpdate controls if the remote device cache should be updated
-     * @param callback optional client callback
+     * @param callback    optional client callback
      * @return the discoverer, which must be stopped by the caller
      */
-    public RemoteDeviceDiscoverer startRemoteDeviceDiscovery(CacheUpdate cacheUpdate, final Consumer<RemoteDevice> callback) {
+    public RemoteDeviceDiscoverer startRemoteDeviceDiscovery(CacheUpdate cacheUpdate,
+            final Consumer<RemoteDevice> callback) {
         final RemoteDeviceDiscoverer discoverer = new RemoteDeviceDiscoverer(this, discoveredDevice -> {
             // Cache the device.
-            remoteDeviceCache.putEntity(discoveredDevice.getInstanceNumber(), discoveredDevice,
-                    cachePolicies.getDevicePolicy(discoveredDevice.getInstanceNumber()));
+            remoteDeviceCache.putEntity(discoveredDevice.getInstanceNumber(), discoveredDevice, cachePolicies
+                    .getDevicePolicy(discoveredDevice.getInstanceNumber()));
 
             // Call the given callback
             if (callback != null) {
@@ -921,13 +921,15 @@ public class LocalDevice implements AutoCloseable {
             throw new NullPointerException("address cannot be null");
         final RemoteDevice d = getCachedRemoteDevice(instanceNumber);
         if (d != null) {
-            if(address instanceof NetworkSourceAddress) {
-                LOG.debug("Updating address with source info, newAddress={}, existingAddress={}", address, d.getAddress());
+            if (address instanceof NetworkSourceAddress) {
+                LOG.debug("Updating address with source info, newAddress={}, existingAddress={}", address, d
+                        .getAddress());
                 //We can confidently change the network number
                 d.setAddress(address);
-            }else {
+            } else {
                 Address newAddress = new Address(d.getAddress().getNetworkNumber().intValue(), address.getMacAddress());
-                LOG.debug("Not updating address without source info, newAddress={}, existingAddress={}", address, d.getAddress());
+                LOG.debug("Not updating address without source info, newAddress={}, existingAddress={}", address, d
+                        .getAddress());
                 //This address can be from the source of the socket message (link service)
                 // and may not be what we really want to update here.  It was decided in 5.0.0
                 // to track incoming addresses via the NetworkSourceAddress class
@@ -1187,9 +1189,8 @@ public class LocalDevice implements AutoCloseable {
     }
 
     public IAmRequest getIAm() {
-        return new IAmRequest(getId(), deviceObject.get(PropertyIdentifier.maxApduLengthAccepted),
-                deviceObject.get(PropertyIdentifier.segmentationSupported),
-                deviceObject.get(PropertyIdentifier.vendorIdentifier));
+        return new IAmRequest(getId(), deviceObject.get(PropertyIdentifier.maxApduLengthAccepted), deviceObject.get(
+                PropertyIdentifier.segmentationSupported), deviceObject.get(PropertyIdentifier.vendorIdentifier));
     }
 
     @Override
@@ -1210,6 +1211,7 @@ public class LocalDevice implements AutoCloseable {
 
     /**
      * Register a callback if other devices have the same id like us.
+     * 
      * @param callback
      */
     public void setSameDeviceIdCallback(Consumer<Address> callback) {
